syntax = "proto3";

package rivet.backend.opengb;

import "proto/common.proto";

message Project {
	rivet.common.Uuid project_id = 1;
	rivet.common.Uuid developer_team_id = 2;
	string name_id = 3;
	string display_name = 4;
	int64 create_ts = 5;
}

message Environment {
	rivet.common.Uuid environment_id = 1;
	rivet.common.Uuid project_id = 2;
	
	string name_id = 3;
	string display_name = 4;
	Tier tier = 5;

	string neon_project_id = 6;
	optional rivet.common.Uuid last_upload_id = 7;

	int64 create_ts = 8;
	optional int64 destroy_ts = 9;
}

enum Tier {
	SHARED = 0;
	DEDICATED = 1;
}

message Module {
	message Db {
		string name = 1;
	}

	string name = 1;
	optional Db db = 2;
}
